styles/main.css
/* Document-wide elements */

html {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    height: 100vh;
    margin: auto;
    background-color: #D8F2B8;
    font-family: "Oswald", sans-serif;
    font-size: 1rem;
    color: #42493A;
}

h2, h4 {
    font-family: "Londrina Solid", "Arial Black", sans-serif;
    text-transform: uppercase;
}

h2 {
    font-size: 3rem;
}

h3 {
    font-size: 2rem;
}

h4 { 
    font-size: 1.75rem;
}

header, footer {
    background-color: #C9E8B5;
    display: flex;
    flex-grow: 0;
    max-height: 20%;
}

header {
    padding-top: 2%;
    padding-bottom: 2%;
    position: sticky;
}

/* I will add keyframes to this to make the transition more smooth. As well as
keyframes to logo with different transition colors. */

header a, footer a {
    text-decoration: none;
    color: #42493A;
    transition: color 1s, width 2s;
}

main {
    max-width: 90%;
    padding-top: 3%;
    padding-bottom: 3%;
    margin: auto;
}

a:hover {
    color: #74DCEE;
}

.hero {
    max-width: 80%;
}

/* Social icons */

.social_icons {
    display: inline;
    width: 50%;
}

i {
    font-size: 2rem;
    padding-left: 3%;
    text-align: center;
}

/* Logo - I know the logo is broken on chrome - I'm working on it */

.logo  {
    text-transform: uppercase;
    font-family: "Londrina Solid", "Arial Black", sans-serif;
    display: flex;
    width: 35%;
}

.logo a {
    display: block;
}

.logo__dj {
    font-size: 5rem;
    writing-mode: sideways-lr;
    text-align: bottom;
    line-height: 5rem;
}

.logo_rows {
    display: flex;
}

.logo__eye {
    font-size: 3rem;
    max-height: 3rem;
}

.logo__drops {
    font-size: 2.4rem;
    line-height: 2.5rem;
}

/* Navbar */

.navwrapper {
    flex: 1;
    text-align: right;
    padding-right: 2%;
}

nav ul {
    list-style-type: none;
}

nav li {
    font-family: "Londrina Solid", "Arial Black", sans-serif;
    font-size: 2rem;
    padding-left: 9%;
    display: inline;
}


/* Footer */

footer {
    position: absolute;
    bottom: 0;
    justify-content: space-between;
    align-items: baseline;
    flex-wrap: wrap;
    padding-bottom: 5%;
    width: 100%;
}

.spacer {
    background-color: #D8F2B8;
    width: 100%;
    flex-shrink: 0;
}

/* the divider has an inner shadow on both FF and Chrome and I don't
know how to get rid of it - any ideas? */

.divider {
    border-top: .3rem solid #42493A;
    width: 90%;
}

.social_icons__footer {
    padding: 3%;
}

.copyright {
    font-family: "Londrina Solid", "Arial Black", sans-serif;
    text-align: right;
    padding-right: 5%;
}

